tests/fixtures/invalid/max_list_float.py
# Cannot call max() with List[int], Float
x = max([1, 2, 3], 1.0)
